Sat Jun 19 14:49:42 1993  Gray Watson  (gray at toaster.antaire.com)

	* Minor changes to configuration and notes files.

Tue Jun 15 10:29:13 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.5.

	* Made some last minute changes to the manual.

Wed Jun  9 15:12:21 1993  Gray Watson  (gray at toaster.antaire.com)

	* Fixed small malloc_dbg token bug from peter miller.

Thu Jun  3 16:01:14 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added index to manual, removed shar files in place of Makefile
	variables.

Mon May 24 12:58:06 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added -r and -k options for auto-unseting of variables or
	keeping of variables with malloc_dbg when setting a tag.

	* Added const checking to configure and reordered some include
	files to put conf.h on top.

Tue May 18 20:07:41 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added log-bad-space token and added expand_buf into chunk.c.

	* Create log_bad_pnt in chunk.  Probably broke stuff.
	Translated some flag to BIT_FLAG format.

	* Updated README and started ftp site thanks to doug.

Thu May 13 00:56:39 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.4.

	* Pretty stable now for a while.  Trying to get access to a ftp
	for distribution ease.

Thu May  6 11:26:03 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added new fix-patch script for myself.  Fixed malloc_t by
	removing LOCAL/EXPORT, etc.

Fri Apr 30 15:26:12 1993  Gray Watson  (gray at toaster.antaire.com)

	* Removed some heap checks in malloc.c per bali's comments and
	fixed some of the error strings.

	* Moved around some defines and changes include ordering.

	* Added -v option to malloc_dbg to provide verbose output
	especially for dumping currently set debug tokens from
	MALLOC_DEBUG variable.

Mon Apr 19 16:04:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.3.

	* Made some changes to a lot of comments, notes files, and ttd